opendap loading! + removed import netcdf4

--- a/grace_wells.ipynb
+++ b/grace_wells.ipynb
@@ -21,7 +21,6 @@
     "from matplotlib.colors import from_levels_and_colors\n",
     "from mpl_toolkits.basemap import Basemap\n",
     "\n",
-    "from netCDF4 import Dataset, date2num, num2date\n",
     "from datetime import datetime, timedelta\n",
     "from scipy import stats\n",
     "\n",
@@ -92,6 +91,110 @@
    "source": [
     "# use pd.read_csv to read in the csv data\n",
     "# Find nearest grid locations for all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lon_g = np.linspace(0,360,num=360/xRes +1)\n",
+    "lat_g = np.linspace(-90,90,num=180/yRes +1)\n",
+    "\n",
+    "# Define grid box centers\n",
+    "lon_c = lon_g[:-1]+xRes/2\n",
+    "lat_c = lat_g[:-1]+yRes/2\n",
+    "\n",
+    "# Define a new metadata file that has grid coordinates for this resolution choice\n",
+    "pmg = pm;\n",
+    "\n",
+    "pmg.loc[:,'lat_ind'] = np.nan\n",
+    "pmg.loc[:,'lon_ind'] = np.nan\n",
+    "\n",
+    "## Determine lat_ind and lon_ind for every record\n",
+    "\n",
+    "# List of proxy sites\n",
+    "#site_list = list(proxy_data.columns.values)\n",
+    "site_list = list(pn.columns.values)\n",
+    "\n",
+    "for index, row in pmg.iterrows():\n",
+    "    lon_s = row['Lon_E']\n",
+    "    lat_s = row['Lat_N']\n",
+    "    lat_ind = np.digitize(lat_s,lat_g,right=True)\n",
+    "    lon_ind = np.digitize(lon_s,lon_g,right=True)\n",
+    "    pmg.set_value(index,'lat_ind',lat_ind-1)\n",
+    "    pmg.set_value(index,'lon_ind',lon_ind-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:        (lat: 360, lon: 720, time: 154)\n",
+       "Coordinates:\n",
+       "  * lon            (lon) float64 0.25 0.75 1.25 1.75 2.25 2.75 3.25 3.75 ...\n",
+       "  * lat            (lat) float64 -89.75 -89.25 -88.75 -88.25 -87.75 -87.25 ...\n",
+       "  * time           (time) datetime64[ns] 2002-04-16 2002-05-10 ...\n",
+       "Data variables:\n",
+       "    lwe_thickness  (time, lat, lon) float64 ...\n",
+       "    uncertainty    (time, lat, lon) float64 ...\n",
+       "Attributes:\n",
+       "    Conventions: CF-1.5\n",
+       "    Metadata_Conventions: Unidata Dataset Discovery v1.0\n",
+       "    standard_name_vocabulary: CF-1.5\n",
+       "    title: JPL RL05M.1-CRI\n",
+       "    summary: Monthly gravity solutions from GRACE as determined from the JPL RL05M mascon solution - with CRI filter applied\n",
+       "    filename: NETCDF/OFFICIAL_V2/GRCTellus.JPL.200204_201606.GLO.RL05M_1.MSCNv02CRIv02.nc\n",
+       "    variable: liquid_water_equivalent_thickness\n",
+       "    platform: GRACE\n",
+       "    instrument: GRACE\n",
+       "    institution: JPL\n",
+       "    creator_name: David Wiese\n",
+       "    creator_email: david.n.wiese@jpl.nasa.gov\n",
+       "    project: GRACE\n",
+       "    id: doi:10.5067/TEMSC-2LCR5\n",
+       "    data_source: GRACE JPL RL05M.1-CRI\n",
+       "    data_source_version: v2.0, CRIv2.0\n",
+       "    time_epoch: 2002-01-01 00:00:00 UTC\n",
+       "    time_coverage_start: 2002-04-16\n",
+       "    time_coverage_end: 2016-6-16\n",
+       "    geospatial_lat_min: -89.75\n",
+       "    geospatial_lat_max: 89.75\n",
+       "    geospatial_lat_units: degrees_north\n",
+       "    geospatial_lat_resolution: 0.5 degree grid; however the native resolution of the data is 3-degree equal-area mascons\n",
+       "    geospatial_lon_min: 0.25\n",
+       "    geospatial_lon_max: 359.75\n",
+       "    geospatial_lon_units: degrees_east\n",
+       "    geospatial_lon_resolution: 0.5 degree grid; however the native resolution of the data is 3-degree equal-area mascons\n",
+       "    time_mean_removed: 2004.000 to 2009.999\n",
+       "    months_missing: 2002-06;2002-07;2003-06;2011-01;2011-06;2012-05;2012-10;2013-03;2013-08;2013-09;2014-02;2014-12;2015-06;2015-10;2015-11;2016-04\n",
+       "    postprocess1:  OCEAN_ATMOSPHERE_DEALIAS_MODEL (GAD), MONTHLY_AVE, ADDED BACK TO OCEAN PIXELS ONLY\n",
+       "    postprocess2: Coastline Resolution Improvement (CRI) filter has been applied to separate land/ocean mass within mascons that span coastlines\n",
+       "    GIA_removed:  A, G., Wahr, and Zhong (2013), Geophys. J. Int., 192, 557-572.\n",
+       "    Geocenter_correction: Swenson, Chambers, and Wahr (2008), J. Geophys. Res., 113, 8410.\n",
+       "    C_20_Substitution: Cheng, M., Ries, and Tapley (2011), J. Geophys. Res., 116, B01409.\n",
+       "    journal_reference: Watkins, M. M., D. N. Wiese, D.-N. Yuan, C. Boening, and F. W. Landerer (2015) Improved methods for observing Earth's time variable mass distribution with GRACE using spherical cap mascons, J. Geophys. Res., 120, 2648-2671. \n",
+       "    DATE_CREATED: 23-Sep-2016 13:22:29"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = xr.open_dataset('http://opendap.jpl.nasa.gov:80/opendap/GeodeticsGravity/tellus/L3/mascon/RL05/JPL/CRI/netcdf/GRCTellus.JPL.200204_201606.GLO.RL05M_1.MSCNv02CRIv02.nc')\n",
+    "data"
    ]
   }
  ],
