--- a/grace_wells.ipynb
+++ b/grace_wells.ipynb
@@ -122,14 +122,60 @@
    },
    "outputs": [],
    "source": [
-    "# Find nearest grid locations for all data"
+    "# 1. Code that subselects regions of interest. This is for all of Africa, but could be used later to get individual time series\n",
+    "\n",
+    "data = xr.open_dataset('http://opendap.jpl.nasa.gov:80/opendap/GeodeticsGravity/tellus/L3/mascon/RL05/JPL/CRI/netcdf/GRCTellus.JPL.200204_201606.GLO.RL05M_1.MSCNv02CRIv02.nc')\n",
+    "test = data['lwe_thickness'].isel(time=0).sel(lat=slice(-37.75,37.75)).sel(lon=slice(340.25,359.75)).sel(lon=slice(0.25,50.75))\n",
+    "lonAF = data['lon'].sel(lon=slice(340.25,359.75)).sel(lon=slice(0.25,50.75))\n",
+    "latAF = data['lat'].sel(lat=slice(-37.75,37.75))\n",
+    "#lonAF = data['lon'].sel(lon=slice(-18.75,50.75))\n",
+    "#roll?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Find nearest grid locations for all data\n",
+    "# lon_g and lat_g are the lons and lats of the gridded products, respectively\n",
+    "\n",
+    "lon_g = np.linspace(0,360,num=360/xRes +1)\n",
+    "lat_g = np.linspace(-90,90,num=180/yRes +1)\n",
+    "\n",
+    "# Define grid box centers\n",
+    "lon_c = lon_g[:-1]+xRes/2\n",
+    "lat_c = lat_g[:-1]+yRes/2\n",
+    "\n",
+    "# Define a new metadata file that has grid coordinates for this resolution choice\n",
+    "pmg = pm;\n",
+    "\n",
+    "pmg.loc[:,'lat_ind'] = np.nan\n",
+    "pmg.loc[:,'lon_ind'] = np.nan\n",
+    "\n",
+    "## Determine lat_ind and lon_ind for every record\n",
+    "\n",
+    "# List of proxy sites\n",
+    "#site_list = list(proxy_data.columns.values)\n",
+    "site_list = list(pn.columns.values)\n",
+    "\n",
+    "for index, row in pmg.iterrows():\n",
+    "    lon_s = row['Lon_E']\n",
+    "    lat_s = row['Lat_N']\n",
+    "    lat_ind = np.digitize(lat_s,lat_g,right=True)\n",
+    "    lon_ind = np.digitize(lon_s,lon_g,right=True)\n",
+    "    pmg.set_value(index,'lat_ind',lat_ind-1)\n",
+    "    pmg.set_value(index,'lon_ind',lon_ind-1)"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
